fix: getFirst와 getLast로 변경